--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ notifications:
 branches:
   only:
     - master
+    - develop
 
 cache:
   directories:
@@ -18,21 +19,30 @@ cache:
 
 matrix:
   include:
-    - php: 7.1
-      env: WP_VERSION=latest
+  include:
+    - php: 5.5
+      env: WP_VERSION=latest WP_MULTISITE=0 PHP_UNIT_VERSION=4.8
+    - php: 5.5
+      env: WP_VERSION=latest WP_MULTISITE=1 PHP_UNIT_VERSION=4.8
+    - php: 5.6
+      env: WP_VERSION=latest WP_MULTISITE=0 PHP_UNIT_VERSION=4.8
+    - php: 5.6
+      env: WP_VERSION=latest WP_MULTISITE=1 PHP_UNIT_VERSION=4.8
     - php: 7.0
-      env: WP_VERSION=latest
-    - php: 5.6
-      env: WP_VERSION=4.4
-    - php: 5.6
-      env: WP_VERSION=latest
-    - php: 5.6
-      env: WP_VERSION=trunk
-    - php: 5.6
-      env: WP_TRAVISCI=phpcs
-    - php: 5.3
-      env: WP_VERSION=latest
+      env: WP_VERSION=latest WP_MULTISITE=0 PHP_UNIT_VERSION=5.7
+    - php: 7.0
+      env: WP_VERSION=latest WP_MULTISITE=1 PHP_UNIT_VERSION=5.7
+    - php: 7.1
+      env: WP_VERSION=nightly WP_MULTISITE=0 PHP_UNIT_VERSION=6.3
+    - php: 7.1
+      env: WP_VERSION=nightly WP_MULTISITE=1 PHP_UNIT_VERSION=6.3
+  fast_finish: true
 
+install:
+  - wget -c -nc --retry-connrefused --tries=0 https://github.com/satooshi/php-coveralls/releases/download/v1.0.1/coveralls.phar
+  - chmod +x coveralls.phar
+  - php coveralls.phar --version
+  
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - |
@@ -53,7 +63,7 @@ before_script:
 script:
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then
-      phpunit
+      phpunit --coverage-clover build/logs/clover.xml
       WP_MULTISITE=1 phpunit
     fi
   - |
