--- a/.travis.yml
+++ b/.travis.yml
@@ -39,10 +39,11 @@ matrix:
   fast_finish: true
 
 install:
+  # Install coveralls.phar
   - wget -c -nc --retry-connrefused --tries=0 https://github.com/satooshi/php-coveralls/releases/download/v1.0.1/coveralls.phar
   - chmod +x coveralls.phar
   - php coveralls.phar --version
-  
+
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - |
