--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description": "Insights for WPGraphQL. Performance and error logging.",
   "type": "wordpress-plugin",
   "license": "GPLv3",
+  "version":"0.2.0",
   "authors": [
     {
       "name": "Jason Bahl",
