--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "wp-graphql/wp-graphql-insights",
   "description": "Insights for WPGraphQL. Performance and error logging.",
   "type": "wordpress-plugin",
-  "license": "GPLv3",
+  "license": "GPL-3.0+",
   "version":"0.2.0",
   "authors": [
     {
