--- a/.travis.yml
+++ b/.travis.yml
@@ -14,19 +14,28 @@ cache:
   directories:
     - $HOME/.composer/cache
 
+services:
+  - mysql
+
 matrix:
   include:
     - php: 5.5
+      dist: trusty
       env: WP_VERSION=latest WP_MULTISITE=0 PHP_UNIT_VERSION=4.8
     - php: 5.5
+      dist: trusty
       env: WP_VERSION=latest WP_MULTISITE=1 PHP_UNIT_VERSION=4.8
     - php: 5.6
+      dist: xenial
       env: WP_VERSION=latest WP_MULTISITE=0 PHP_UNIT_VERSION=4.8
     - php: 5.6
+      dist: xenial
       env: WP_VERSION=latest WP_MULTISITE=1 PHP_UNIT_VERSION=4.8
     - php: 7.0
+      dist: xenial
       env: WP_VERSION=latest WP_MULTISITE=0 PHP_UNIT_VERSION=5.7
     - php: 7.0
+      dist: xenial
       env: WP_VERSION=latest WP_MULTISITE=1 PHP_UNIT_VERSION=5.7
     - php: 7.1
       env: WP_VERSION=nightly WP_MULTISITE=0 PHP_UNIT_VERSION=6.3
@@ -42,9 +51,7 @@ install:
 
 before_script:
   - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-  - composer self-update
   - composer require phpunit/phpunit:$PHP_UNIT_VERSION
-  - composer install --no-interaction
   - mkdir -p build/logs
   - ls -al
 
